# cpanel-mcp

./: LICENSE  README.md  pyproject.toml  server.py
.claude/: settings.json
src/: server.py
src/cpanel_mcp/: server.py
tests/: conftest.py  test_cpanel_api.py  test_mcp_tools.py
