[project]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = ["mcp[cli]>=1.11.0"]
description = "An MCP server to interact with cPanel via API functions to manage email accounts"
keywords = ["automation", "cpanel", "email account management", "llm", "mcp"]
license = { text = "MIT" }
name = "cpanel-mcp"
readme = "README.md"
requires-python = ">=3.10"
version = "0.2.0"

[project.scripts]
cpanel-mcp = "cpanel_mcp.server:main"

[build-system]
build-backend = "uv_build"
requires = ["uv_build>=0.9.5,<0.10.0"]

[dependency-groups]
dev = ["pytest-cov>=7.0.0", "pytest>=8.4.2"]

[tool.ruff]
line-length = 79

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP"]

[tool.ruff.lint.per-file-ignores]
"**/{tests,docs,tools,terraform}/*" = ["F401", "I001"]

[tool.ruff.format]
docstring-code-format = true
line-ending = "lf"

[tool.mypy]
follow_imports = "silent"
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = ["--cov-fail-under=80", "--cov-report=html:cov_html", "--cov=."]
minversion = "6.2"
pythonpath = ["src"]
required_plugins = ["pytest-cov>4"]
testpaths = ["tests"]
